@@ -150,3 +150,9 @@ Alon
 ----
 Alon
 1) Bug fix: 0001985: typo on yotpo settings on woocommerce.  
+
+2014-05-14
+----
+Alon
+1) Fix export review bug.  
+
